--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,18 @@ jobs:
     - name: Validate Gradle wrapper
       run: chmod +x gradlew
 
+    - name: Configure the application.properties file
+        run: |
+          cat >./src/main/resources/application.properties <<EOF
+          spring.datasource.url=jdbc:mysql://localhost:3306/unittest
+          spring.datasource.username=root
+          spring.datasource.password=
+          spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+          spring.jpa.hibernate.ddl-auto=create
+          spring.jpa.open-in-view=false
+          spring.data.jpa.repositories.bootstrap_mode=default
+          EOF
+
     - name: Run the Gradle package task
       uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
       with:
