--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,10 +40,9 @@ jobs:
           spring.datasource.url=jdbc:mysql://localhost:3306/unittest
           spring.datasource.username=root
           spring.datasource.password=
-          spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-          spring.jpa.hibernate.ddl-auto=create
-          spring.jpa.open-in-view=false
-          spring.data.jpa.repositories.bootstrap_mode=default
+          spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+          spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+          spring.jpa.hibernate.ddl-auto=update
           EOF
 
     - name: Run the Gradle package task
